Mudanças em "projetos" e "fim"

--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>UNIP - Universidade Paulista</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2022 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h5 class="w3-opacity"><b>igital Innovation One (DIO)</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
-                UNIP - Universidade Paulista | Ensino Presencial e a Distância. A UNIP está presente em mais de 900 localidades no
-                Brasil e promove a formação atualizada dos alunos e sua capacitação para uma sociedade em mudança, por meio de um ensino
-                de qualidade, tecnologicamente avançado e dirigido para o futuro.
+                Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
+                A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
+                de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="" target="_blank"></a></li>
+                <li><a href="https://www.dio.me/certificate/2FAF88C5" target="_blank">Criando Seu Currículo Online Com HTML e GitHub Pages</a></li>
                 <li><a href="" target="_blank"></a></li>
                 <li><a href="" target="_blank"></a></li>
                 <li><a href="" target="_blank"></a></li>
@@ -125,9 +125,11 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023</h6>
-              <p>Doutorando em Engenharia de Computação com foco em acessibildiade de conteúdos educacionais.</p>
+              <h5 class="w3-opacity"><b>UNIP - Universidade Paulista</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2022 - Atual</h6>
+              <p>UNIP - Universidade Paulista | Ensino Presencial e a Distância. A UNIP está presente em mais de 900 localidades no
+                Brasil e promove a formação atualizada dos alunos e sua capacitação para uma sociedade em mudança, por meio de um ensino
+                de qualidade, tecnologicamente avançado e dirigido para o futuro.</p>
             </div>
           </div>
 
@@ -138,19 +140,19 @@
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/falvojr/copa-2022-android" target="_blank">falvojr/copa-2022-android</a>
+                <a href="https://github.com/Velostroso/converter_of_decimal_to_others" target="_blank">Velostroso/converter_of_decimal_to_others</a>
               </h6>
-              <p>App Android Nativo utilizando a arquitetura MVVM com Kotlin e diversas features do Android Jetpack.</p>
+              <p>Código para transfomar números decimais em qualquer outro número, seja binário, hexadecimal e etc.</p>
               <hr>
             </div>
-            <div class="w3-container">
+<!--             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="https://gitlab.com/denilsonbonatti/kubernetes-projeto2-dio" target="_blank">denilsonbonatti/kubernetes-projeto2-dio</a>
               </h6>
               <p>Repositório no GitLab com um pipeline configurado em Kubernetes.</p>
             </div>
-          </div>
+          </div> -->
   
           <!-- End Right Column -->
         </div>
@@ -163,8 +165,8 @@
   
     <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/falvojr" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/falvojr" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/Velostroso" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/matheus-lino-237970191/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
