--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <div class="w3-container">
               <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Estudante</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>São Paulo-SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>matheusvelgo@hotmail.com</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>matheus.veloso.lino@hotmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(11) 91324-6653</p>
               <hr>
   
               <p class="w3-large">
                 <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b>
               </p>
-              <p>Python</p>
+              <p>Java, C, React.js, API's REST, Git, PowerBI</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">25%</div>
               </div>
