--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
               </p>
               <p>C</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">25%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">50%</div>
               </div>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">25%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">30%</div>
               </div>
               <p>MySQL</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">25%</div>
               </div>
-              <p>Linux</p>
+              <p>API's REST</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">25%</div>
               </div>
@@ -78,6 +78,10 @@
               <div class="w3-light-grey w3-round-xlarge">
                 <div class="w3-round-xlarge w3-indigo" style="height:24px;width:25%"></div>
               </div>
+              <p>Francês</p>
+              <div class="w3-light-grey w3-round-xlarge">
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:25%"></div>
+              </div>
               <br>
             </div>
           </div><br>
@@ -90,7 +94,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-            <p>Sou estudante de Ciência da Computação e estou iniciando minha carreira como programador. Possuo conhecimentos básicos em linguagens de programação como Java e Python, e estou sempre buscando aprender mais e aprimorar minhas habilidades. Sou uma pessoa proativa e dedicada, e estou ansioso para ter oportunidade de aplicar meus conhecimentos em projetos reais e contribuir para o sucesso da empresa.</p>
+            <p>Sou um estudante de Análise e Desenvolvimento de Sistemas e desejo iniciar minha carreira como programador. Possuo conhecimentos básicos em linguagens de programação como Java e C e estou sempre buscando aprender mais e aprimorar minhas habilidades. Sou uma pessoa proativa, dedicada e estou ansioso pela oportunidade de aplicar meus conhecimentos em projetos reais e contribuir sempre mais.</p>
           </div>
 
 <!--           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -109,7 +113,7 @@
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>igital Innovation One (DIO)</b></h5>
+              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
