--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
               <p>Código para transfomar números decimais em qualquer outro número, seja binário, hexadecimal e etc.</p>
               <hr>
             </div>
+            <div class="w3-container">
+              <h6 class="w3-text-indigo">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Velostroso/converter_of_decimal_to_others" target="_blank">Desenvolvimento de Sistema em C para Hortifruti</a>
+              </h6>
+              <p>Criado para gestão de pesagem e controle de estoque com integração entre balança e sistema interno, implementação de menu interativo para facilitar vendas e consultas de estoque.</p>
+              <hr>
+            </div>
 <!--             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
