--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 </h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -130,7 +130,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>UNIP - Universidade Paulista</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2024 - Atual</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2024 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>UNIP - Universidade Paulista | Ensino Presencial e a Distância. A UNIP está presente em mais de 900 localidades no
                 Brasil e promove a formação atualizada dos alunos e sua capacitação para uma sociedade em mudança, por meio de um ensino
                 de qualidade, tecnologicamente avançado e dirigido para o futuro.</p>
