--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
               </div>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:30%">30%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:30%">45%</div>
               </div>
-              <p>MySQL</p>
+              <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">25%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">40%</div>
               </div>
               <p>API's REST</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
