--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
               </div>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:30%">45%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:46%">45%</div>
               </div>
               <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">40%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:40%">40%</div>
               </div>
               <p>API's REST</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:25%">25%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:30%">30%</div>
               </div>
               <br>
   
@@ -122,9 +122,9 @@
               </p>
               <ul>
                 <li><a href="https://www.dio.me/certificate/2FAF88C5" target="_blank">Criando Seu Currículo Online Com HTML e GitHub Pages</a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
+                <li><a href="https://www.dio.me/certificate/BFRXKW4S" target="_blank"></a>Versionamento de código Git</li>
+                <li><a href="https://cert.efset.org/LzcXbB" target="_blank">Certificado Inglês Avançado C1</a></li>
+                <li><a href="https://lms.ev.org.br/mpls/Web/Lms/Student/PrintCertificateDownload.ashx?uid=11684820&p=xlH%252fkQnVjsF8a99ad1FfRd2c%252fST8wPej" target="_blank"></a>Certificado linguagem de programação Python - Básico</li>
               </ul>
               <hr>
             </div>
