--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
               </p>
               <ul>
                 <li><a href="https://www.dio.me/certificate/2FAF88C5" target="_blank">Criando Seu Currículo Online Com HTML e GitHub Pages</a></li>
-                <li><a href="https://www.dio.me/certificate/BFRXKW4S" target="_blank"></a>Versionamento de código Git</li>
+                <li><a href="https://www.dio.me/certificate/BFRXKW4S" target="_blank">Versionamento de código Git</a></li>
                 <li><a href="https://cert.efset.org/LzcXbB" target="_blank">Certificado Inglês Avançado C1</a></li>
-                <li><a href="https://lms.ev.org.br/mpls/Web/Lms/Student/PrintCertificateDownload.ashx?uid=11684820&p=xlH%252fkQnVjsF8a99ad1FfRd2c%252fST8wPej" target="_blank"></a>Certificado linguagem de programação Python - Básico</li>
+                <li><a href="https://lms.ev.org.br/mpls/Web/Lms/Student/PrintCertificateDownload.ashx?uid=11684820&p=xlH%252fkQnVjsF8a99ad1FfRd2c%252fST8wPej" target="_blank">Certificado linguagem de programação Python - Básico</a></li>
               </ul>
               <hr>
             </div>
