--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/2FAF88C5" target="_blank">Criando Seu Currículo Online Com HTML e GitHub Pages</a></li>
+                <li><a href="https://www.dio.me/certificate/Q3ZLHTOI" target="_blank">Projeto de conta bancária</a></li>
                 <li><a href="https://www.dio.me/certificate/BFRXKW4S" target="_blank">Versionamento de código Git</a></li>
                 <li><a href="https://cert.efset.org/LzcXbB" target="_blank">Certificado Inglês Avançado C1</a></li>
                 <li><a href="https://lms.ev.org.br/mpls/Web/Lms/Student/PrintCertificateDownload.ashx?uid=11684820&p=xlH%252fkQnVjsF8a99ad1FfRd2c%252fST8wPej" target="_blank">Certificado linguagem de programação Python - Básico</a></li>
